<resources>
    <string name="app_name">O\'rta Osiyo Davlatlari</string>
    <string name="o_zbekiston">O\'zbekiston</string>

    <string name="dastur_haqida">Dastur haqida</string>
    <string name="chiqish">Chiqish</string>
    <string name="boshlash">Boshlash</string>
    <string name="app_info">Bu dastur orqali siz O\'rta Osiyo davlatlari haqida bilib olishingiz mumkin bo\'ladi! Dasturdagi kamchliklar uchun uzr!</string>
    <string name="qirgiz">Qirgʻiziston (Qirgʻizcha: Kirgizstan — Ruscha: Kirgizstan), Qirgʻiz Respublikasi (Qirgʻizcha. Kirgiz Respublikasi — Ruscha. Kirgizskaya Respublika) — Oʻrta Osiyoning shimoli-sharqida joylashgan davlat. Poytaxti — Bishkek shahri. Qirgʻiziston BMTning azosidir. Mamlakat shimolda Qozogʻiston, gʻarbida Oʻzbekiston, janubi-gʻarbida Tojikiston va janubi-sharqida Xitoy Xalq Respublikasi joylashgan. Qirgʻiziston aholisi bugungi kunda 6 million kishidan ortiq. Uning 72,6 % qirgʻizlar, 14,34 % oʻzbeklar, 10,65 % ruslar va 8,31 % 5% tojiklar boshqa turli millat vakillari tashkil qiladi. Umuman mamlakatda 80 dan oshiq millat va elat vakillari istiqomat qiladilar. Qirg\'izistonning aholisi soni 6 550 000 kishi.</string>
    <string name="tojik">Tojikiston (tojikcha: Тоҷикистон), Tojikiston Respublikasi (tojikcha. Ҷумҳурии Тоҷикистон) — Oʻrta Osiyoning janubi-sharqida joylashgan davlat. Maydoni 143.100 ming km. Aholisi 8,486,300 kishi (2014). Gʻarbiy va shimoli-gʻarbiy tomonidan Oʻzbekiston bilan, shimoliy tomonidan Qirgʻiziston, sharqiy tomonidan Xitoy bilan va janubiy tomonidan Afgʻoniston davlatlari bilan chegaradosh. Poytaxti — Dushanbe shahri. Mamuriy jihatdan Togʻli Badaxshon muxtor viloyati, 2 viloyat va 45 tumanga boʻlinadi. Tojikistonning dengizga chiqish imkoniyati yo\'q. Tojikiston Prezidenti Emomali Rahmon. Bosh Vazir: Qohir Rasulzoda. Tojikiston — respublika, unitar demokratik ijtimoiy huquqiy davlat. Amaldagi Konstitutsiyasi 1994-yil 6-noyabrda qabul qilingan. Davlat boshligʻi — prezident (1994-yildan Emomali Rahmon), u Tojikiston fuqarolari tomonidan 7 yil muddatga saylanadi. Qonun chiqaruvchi hokimiyatni Majlisi Oli, ijrochi hokimiyatni bosh vazir boshchiligida Vazirlar Kengashi (hukumat) amalga oshiradi[3].</string>
    <string name="turkman">Turkmaniston (turkmancha. Türkmenistan), Turkmaniston Respublikasi (turkmancha. Türkmenistan Respublikasy) — Markaziy Osiyodagi suveren davlat boʻlib, shimoli-gʻarbda Qozogʻiston, shimol va sharqda Oʻzbekiston, janubi-sharqda Afgʻoniston, janubdan Eron, janubi-gʻarbda va gʻarbdan Kaspiy dengizi bilan chegaradosh. Ashxobod — mamlakatning poytaxti va eng yirik shahri. Mamlakat aholisi 6 millionni tashkil etadi, bu Oʻrta Osiyo respublikalarining eng pastidir. Turkmaniston Osiyodagi eng kam aholisi boʻlgan davlatlardan biridir. Turkmaniston fuqarolari Turkmanistonliklar deb nomlanadi. Turkmaniston asrlar davomida sivilizatsiyalar chorrahasida boʻlgan. Oʻrta asrlarda Marv islom dunyosining buyuk shaharlaridan biri boʻlgan va Buyuk Ipak yoʻlidagi muhim toʻxtash joyi, XV asr oʻrtalarigacha Xitoy bilan savdo-sotiq uchun foydalanilgan karvon yoʻli edi. 1881-yilda Rossiya imperiyasi tomonidan qoʻshib olingan Turkmaniston keyinchalik Oʻrta Osiyoda boshqa davlatlar kabi bolsheviklarga qarshi harakat qildi. 1925-yilda Turkmaniston Sovet Ittifoqining tarkibiy respublikasi, Turkmaniston Sovet Sotsialistik Respublikasi (Turkmaniston SSR) ga aylandi; 1991-yilda Sovet Ittifoqi parchalanganidan keyin mustaqillikka erishdi. Turkmaniston tabiiy gaz zaxiralari boʻyicha dunyoda toʻrtinchi oʻrinni egallaydi. Mamlakatning katta qismini Qoraqum choʻllari qamrab olgan. 1993-yildan 2017-yilgacha fuqarolar davlat tomonidan elektr energiyasi, suv va tabiiy gazni bepul olishgan. Suveren Turkmaniston davlatini Prezident Saparmurat Niyazov 2006-yilda vafotigacha umrbod boshqargan. Gurbanguli Berdimuhamedov 2007-yilda prezident etib saylangan (u ilgari vitse-prezident, keyin prezident vazifasini bajaruvchi boʻlgan).</string>
    <string name="kazak">Qozogʻiston yoki Qozogʻiston Respublikasi (qozoqcha: Қазақстан, Qazaqstan, Қазақстан Республикасы, Qazaqstan Respublikası) – Oʻrta Osiyoda joylashgan mamlakat. Ushbu davlat mamuriy jihatdan 14 viloyat, viloyatlar esa audan (tuman) larga boʻlinadi. Poytaxti – Nur-Sulton shahri. BMT azosi. Qozogʻistonning eng yirik megapolis shaharlari Olmota, Nur-Sulton, Chimkent shaharlari hisoblanadi. Undanan keyingi yirikroq shaharlari esa Qaragʻandi va Aqtoʻbe. Qozogʻiston yer maydoni boʻyicha (2 million 724,9 ming km) jahonda 9-oʻrinda turadi. Beshta davlat bilan chegaradosh, Shimol tarafida Rossiya bilan – 6 467 km, janubda – Turkmaniston – 380 km, Oʻzbekiston – 2 300 km va Qirgʻiziston – 980 km, sharqida – Xitoy bilan – 1 460 km chegaradosh. Umumiy quruqlik chegarasining uzunligi – 13392,6 km hosoblanadi.[5] Shuningdek, gʻarbiy tarafida Kaspiy dengizi va janubda Orol dengizi suvlari yuvib turadi.[6] Qozog\'iston aholisi soni 19,1 mln. kishi (2021-yil).</string>
    <string name="uzbek">Oʻzbekiston (rasman: Oʻzbekiston Respublikasi) — Markaziy Osiyoning markaziy qismida joylashgan mamlakat. Oʻzbekistonning poytaxti — Toshkent shahri boʻlib, davlat tili — oʻzbek tili hisoblanadi. Maydoni — 448,978[5] km2. Aholi soni (2020) — 34,011,621[6]. Pul birligi — soʻm. Oʻzbekiston Respublikasi 12 ta viloyat, Toshkent shahri va Qoraqalpogʻiston Respublikasidan iboratdir, shuningdek, davlat mustaqil, demokratik, dunyoviy va konstitutsiyaviy davlat ham hisoblanadi. Oʻzbekiston MDH, BMT, YXHT va SHHT azosidir. Oʻzbekiston qirgʻoqqa ega boʻlmagan besh mamlakat bilan, yani: shimoldan Qozogʻiston; shimoli-sharqdan Qirgʻiziston; janubi-sharqdan Tojikiston; janubdan Afgʻoniston; va janubi-gʻarbiy qismida Turkmaniston bilan chegaradosh. Oʻzbekiston iqtisodiyoti bozor iqtisodiyotiga bosqichma-bosqich oʻtadi, tashqi savdo siyosati import oʻrini bosishga asoslangan. 2017-yil sentabrida mamlakat valyutasi bozor kursi boʻyicha toʻliq konvertatsiya qilinmoqda. Oʻzbekiston paxta tolasini ishlab chiqaruvchi va eksport qiluvchi yirik korxonadir. Mamlakatda shuningdek, dunyodagi eng yirik oltin koni mavjud. Sovet davridagi ulkan energiya ishlab chiqarish qurilmalari va tabiiy gazni yetkazib berish bilan Oʻzbekiston Markaziy Osiyodagi eng yirik elektr ishlab chiqaruvchisi boʻldi.</string>
    <string name="toshkent">Toshkent</string>

    <string-array name="davlat_nomi">
        <item>O\'zbekiston</item>
        <item>Qozog\'iston</item>
        <item>Turkmaniston</item>
        <item>Tojikiston</item>
        <item>Qirg\'iziston</item>
    </string-array>

    <string-array name="poytaxt">
        <item>Toshkent</item>
        <item>Nursulton</item>
        <item>Ashxobod</item>
        <item>Dushanbe</item>
        <item>Bishkek</item>
    </string-array>

</resources>