<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kirish">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/flaglogo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/image_logo"
        android:text="@string/app_name"
        android:textSize="38sp"
        android:textStyle="italic" />

    <android.widget.Button
        android:id="@+id/boshlash_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"
        android:text="@string/boshlash" />
    <android.widget.Button

        android:id="@+id/info_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boshlash_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"
        android:text="@string/dastur_haqida" />
    <android.widget.Button
        android:id="@+id/chiqish_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"
        android:text="@string/chiqish" />
</RelativeLayout>