<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".SecondActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/uzbek" />

            <TextView
                android:id="@+id/nomi_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/o_zbekiston"
                android:textSize="45sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/poytaxt_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/toshkent"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tasnif_txt"
                android:layout_width="wrap_content"
                android:justificationMode="inter_word"
                android:padding="18dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/uzbek"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>